fix ie11 images overflowing and card stretching (#1170)

--- a/docroot/themes/custom/uiowa_bootstrap/scss/partials/03_components/paragraphs/_uiowa_paragraphs.scss
+++ b/docroot/themes/custom/uiowa_bootstrap/scss/partials/03_components/paragraphs/_uiowa_paragraphs.scss
@@ -147,3 +147,8 @@
 //.paragraph--type--card {
 //  display: flex;
 //}
+.paragraph--type--card {
+  .card-body {
+    min-height: 1px;
+  }
+}
